Fixed out of stock message align to match High price baseline

--- a/packages/scandipwa/src/component/ProductCompareAttributeRow/ProductCompareAttributeRow.style.scss
+++ b/packages/scandipwa/src/component/ProductCompareAttributeRow/ProductCompareAttributeRow.style.scss
@@ -62,4 +62,10 @@
             padding-inline-end: 0;
         }
     }
+
+    &-OutOfStock {
+        @extend .ProductCompareAttributeRow-Value;
+
+        padding-top: 15px;
+    }
 }
